--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para a Malu</title>
-    <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="CSS/design.css">
 </head>
 <body>
     <div class="wrapper"> <!-- NOVO -->
