--- a/texto.html
+++ b/texto.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="CSS/texto.css">
 </head>
 <body>
-    <H1>Maria Luiza de Oliveira, você é aquilo que eu estava procurando por anos, você é o amor da minha vida, a minha luz e eu tenho mt orgulho de você, e tambêm muita sorte de ter te conhecido, você faz todos os meus dias ficarem cheio de cor só de acordar com seus bom dia, você é o motivo de eu ter forças pra levantar da minha cama e seguir meus dia, sempre melhorando por você, por mim, por nós e pelo nosso futuro juntos, eu olho pra essa foto e fico pensando em como eu consegui conquistar uma deus grega como essa e como você pode amar uma pessa tão falha como eu mas eu esqueço essa parte de ser falho toda vez que caio em seus braços </H1>
+<div class="texto">
+      <H1>Maria Luiza de Oliveira, você é aquilo que eu estava procurando por anos, você é o amor da minha vida, a minha luz e eu tenho mt orgulho de você, e tambêm muita sorte de ter te conhecido, você faz todos os meus dias ficarem cheio de cor só de acordar com seus bom dia, você é o motivo de eu ter forças pra levantar da minha cama e seguir meus dia, sempre melhorando por você, por mim, por nós e pelo nosso futuro juntos, eu olho pra essa foto e fico pensando em como eu consegui conquistar uma deus grega como essa e como você pode amar uma pessa tão falha como eu mas eu esqueço essa parte de ser falho toda vez que caio em seus braços </H1>
+</div>
      <script>
     const numHearts = 100;
 
