--- a/texto.html
+++ b/texto.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para a Malu</title>
     <link rel="stylesheet" href="CSS/texto.css">
+    <img src="img/1000039512.jpeg" alt="">
 </head>
 <body>
 <div class="texto">
