--- a/texto.html
+++ b/texto.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 <head>
     <style>
-    /* (todo o seu CSS permanece igual) */
     body {
         margin: 0;
         background: linear-gradient(to bottom, #000000, #2c0000, #490000, #790000);
@@ -61,6 +60,18 @@
         }
     }
 
+    /* Estilo da imagem vertical pequena */
+    .foto-vertical {
+        display: block;
+        margin: 20px auto 0 auto;
+        width: auto;
+        height: 200px; /* altura controlada para ficar retangular na vertical */
+        border-radius: 12px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+        z-index: 2;
+        position: relative;
+    }
+
     @media (max-width: 600px) {
         h1 {
             font-size: 1rem;
@@ -76,11 +87,8 @@
             padding: 15px;
         }
 
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 0 auto;
+        .foto-vertical {
+            height: 150px;
         }
     }
 
@@ -96,7 +104,6 @@
             padding: 10px;
         }
     }
-
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -104,8 +111,10 @@
     <link rel="stylesheet" href="CSS/texto.css">
 </head>
 <body>
-    <img src="img/1000039512.jpeg" alt="">
-    
+
+    <!-- Imagem centralizada e pequena -->
+    <img src="img/1000039512.jpeg" alt="" class="foto-vertical">
+
     <div class="texto">
         <h1>Maria Luiza de Oliveira, você é tudo aquilo que eu procurei por anos. Você é o amor da minha vida, a minha luz, e eu tenho muito orgulho de você, tenho muita sorte de ter te conhecido, você faz todos os meus dias ficarem cheios de cor só com o seu ‘bom dia’. Você é o motivo pelo qual eu tenho forças para levantar da cama e seguir o meu dia, sempre buscando ser melhor por você, por mim, por nós e pelo nosso futuro juntos.</h1>
     </div>
