--- a/texto.html
+++ b/texto.html
@@ -62,16 +62,16 @@
 
     .foto-vertical {
     display: block;
-    margin: 20px auto 0 auto;
-    max-height: 200px;
-    max-width: 120px; /* controla largura para manter formato vertical */
-    width: 100%;
-    height: auto;
+    margin: 30px auto 10px auto;
+    height: 40vh; /* 40% da altura da tela */
+    width: auto; /* largura automática proporcional */
+    max-width: 90%; /* garante que não ultrapasse a tela em celulares */
     border-radius: 12px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
     z-index: 2;
     position: relative;
-    }
+}
+
 
 
     @media (max-width: 600px) {
