--- a/texto.html
+++ b/texto.html
@@ -61,18 +61,16 @@
     }
 
     .foto-vertical {
-    display: block;
-    margin: 30px auto 10px auto;
-    height: 40vh; /* 40% da altura da tela */
-    width: auto; /* largura automática proporcional */
-    max-width: 90%; /* garante que não ultrapasse a tela em celulares */
-    border-radius: 12px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
-    z-index: 2;
-    position: relative;
-}
-
-
+        display: block;
+        margin: 30px auto 10px auto;
+        height: 40vh; /* imagem grande e vertical */
+        width: auto;
+        max-width: 90%;
+        border-radius: 12px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+        z-index: 2;
+        position: relative;
+    }
 
     @media (max-width: 600px) {
         h1 {
@@ -90,7 +88,7 @@
         }
 
         .foto-vertical {
-            height: 150px;
+            height: 35vh; /* imagem maior no celular */
         }
     }
 
@@ -114,7 +112,7 @@
 </head>
 <body>
 
-    <!-- Imagem centralizada e pequena -->
+    <!-- Imagem centralizada e em formato vertical -->
     <img src="img/1000039512.jpeg" alt="" class="foto-vertical">
 
     <div class="texto">
